Switch to AliBaba 2.0-SNAPSHOT