@@ -39,21 +39,19 @@ set JAVA=%JAVA_HOME%\bin\java
 :checkJdk14
 "%JAVA%" -version 2>&1 | findstr "1.4" >NUL
 IF ERRORLEVEL 1 goto checkJdk15
-echo Java 5 or newer required to run the server
+echo Java 6 or newer required to run the server
 goto end
 
 :checkJdk15
 "%JAVA%" -version 2>&1 | findstr "1.5" >NUL
 IF ERRORLEVEL 1 goto java6
-rem use java.ext.dirs hack
-rem echo Using java.ext.dirs to set classpath
-"%JAVA%" -server -mx512m -Dfile.encoding=UTF-8 "-Djava.library.path=%BIN_DIR%" "-Djava.io.tmpdir=%TMP_DIR%" "-Djava.util.logging.config.file=%LOG_CONF%" -Djava.ext.dirs="%LIB_DIR%" %MAIN% -d "%BASE_DIR%" %CMD_LINE_ARGS%
+echo Java 6 or newer required to run the server
 goto end
 
 :java6
 rem use java 6 wildcard feature
 rem echo Using wildcard to set classpath
-"%JAVA%" -server -mx512m -Dfile.encoding=UTF-8 "-Djava.library.path=%BIN_DIR%" "-Djava.io.tmpdir=%TMP_DIR%" "-Djava.util.logging.config.file=%LOG_CONF%" -cp "%LIB_DIR%\*" %MAIN% -d "%BASE_DIR%" %CMD_LINE_ARGS%
+"%JAVA%" -server -mx512m -Dfile.encoding=UTF-8 "-Djava.library.path=%LIB_DIR%" "-Djava.io.tmpdir=%TMP_DIR%" "-Djava.util.logging.config.file=%LOG_CONF%" -cp "%LIB_DIR%\*" %MAIN% -d "%BASE_DIR%" %CMD_LINE_ARGS%
 goto end
 
 :end
